Update url to custom domain

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Kelsey Rogers
 email: krogers.st@gmail.com
 description: ""
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://kelseymarierogers.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  krogersst
 
 # Build settings
